User register and change of project report
